# hello-rust

./: Cargo.toml  Makefile  README.md  build.rs  company.proto
proto/: chat.proto
src/: client.rs  company.rs  lib.rs  main.rs  mod.rs  server.rs
