[package]
name = "hello"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tonic = "0.10"
tonic-health = "0.10.2"
reqwest = { version = "0.11", default-features = false, features = ["json"] }
prost = "0.12"
prost-types = "0.12"
tokio = { version = "1.34", features = ["macros", "rt-multi-thread"] }


[build-dependencies]
tonic-build = "0.10"

[features]
dockerproto = [] # compile in docker or not

[[bin]]
name = "http-server"
path = "src/main.rs"

[[bin]]
name = "tonic-sever"
path = "src/server.rs"

[[bin]]
name = "client"
path = "src/client.rs"